Finished intro project
added text input when collecting items

--- a/Intro - Roll a ball/Assembly-CSharp.csproj
+++ b/Intro - Roll a ball/Assembly-CSharp.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\Camera_controller.cs" />
      <Compile Include="Assets\Scripts\Player_controller.cs" />
+     <Compile Include="Assets\Scripts\Rotator.cs" />
  <Reference Include="UnityEngine.Purchasing">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/UnityPurchasing/UnityEngine.Purchasing.dll</HintPath>
  </Reference>
